# playwright-ebay-e2e-framework

./: .env.example  .gitignore  Dockerfile  README.md  compliance_report.html  conftest.py  docker-compose.yml  presentation.html  pyproject.toml  requirements.txt  runbook.html  save_auth_state.py  shopping-flow-map.html  smoke-test-map.html  start-gui.bat  validate_locators.py
.github/workflows/: e2e-tests.yml
business_steps/: __init__.py  cart_actions.py  login_actions.py  search_actions.py
config/: __init__.py  config.yaml  settings.py
core/: __init__.py  base_page.py  logger_config.py  retry_handler.py  smart_locator.py
data/: search_data.json
gui/: app.py
gui/templates/: index.html
models/: __init__.py  flow_state.py
pages/: __init__.py  cart_page.py  home_page.py  login_page.py  product_page.py  search_results_page.py
tests/: conftest.py  test_e2e_shopping.py  test_shopping_flow.py  test_smoke.py
utils/: __init__.py  allure_helper.py  data_loader.py  html_report_generator.py  screenshot_manager.py  step_collector.py
